Enforce error-prone warning, delete silencer in error-prone.gradle